syntax = "proto3";

option go_package = "github.com/cigarframework/reconciled/pkg/proto";
package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "_proto/state.proto";

option (gogoproto.goproto_getters_all) = true;
option (gogoproto.gostring_all) = true;

message User {
    string Name = 1;
    string Group = 2;
    string Token = 3;
}

message ReviewRequest {
    string Action = 1;
    State State = 2;
    string Patch = 3;
    User User = 4;
    string Expression = 5;
}


service Plugin {
    rpc Audit (ReviewRequest) returns (google.protobuf.Empty) {

    }
    rpc Admission (ReviewRequest) returns (ReviewRequest) {

    }
}
